fix: resolve colors for dark mode: select, darkModeSwitcher

--- a/src/assets/styles/components/_dark-mode-switcher.scss
+++ b/src/assets/styles/components/_dark-mode-switcher.scss
@@ -34,8 +34,6 @@
       .svg-icon {
         position: absolute;
         right: 1px;
-        stroke: var(--yellow-600);
-        fill: var(--yellow-600);
       }
     }
   }
@@ -57,8 +55,6 @@
         }
         .svg-icon {
           left: 1px;
-          stroke: var(--yellow-900);
-          fill: var(--yellow-900);
         }
       }
     }
